# local-qwen-swarm

./: .gitignore  README.md  pyproject.toml
agent/: _types.py  localswarm.py
llm/: local.py
tests/: test_localswarm.py
